--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": ["next/core-web-vitals", "prettier"],
+    "plugins": [
+        // "@typescript-eslint",
+        "@stylistic"
+    ],
+    "rules": {
+        "@stylistic/semi": ["error", "always"],
+        "react/prop-types": "off",
+        "react/react-in-jsx-scope": "off"
+        // "@typescript-eslint/no-explicit-any": "off",
+        // "@typescript-eslint/no-unused-vars": "warn",
+        // "@typescript-eslint/explicit-module-boundary-types": "off"
+    }
 }
