--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "next-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.1"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1"
-  }
+    "name": "next-portfolio",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "format": "prettier --write .",
+        "lint": "next lint",
+        "lint:fix": "next lint --fix",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "@tailwindcss/typography": "^0.5.10",
+        "clsx": "^2.0.0",
+        "contentlayer": "^0.3.4",
+        "next": "13.4.1",
+        "next-contentlayer": "^0.3.2",
+        "next-themes": "^0.2.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "rehype-pretty-code": "^0.10.2"
+    },
+    "devDependencies": {
+        "@stylistic/eslint-plugin": "^1.0.0",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@typescript-eslint/eslint-plugin": "^6.10.0",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.0.1",
+        "eslint-config-prettier": "^9.0.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^15.0.2",
+        "postcss": "8.4.23",
+        "prettier": "^3.0.3",
+        "tailwindcss": "^3.3.5",
+        "typescript": "^5"
+    }
 }
