Add @heroicons/react dependency, remove unused code, update ESLint rules, and define document types for Contentlayer

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,12 @@
 {
     "extends": ["next/core-web-vitals", "prettier"],
-    "plugins": [
-        // "@typescript-eslint",
-        "@stylistic"
-    ],
+    "plugins": ["@typescript-eslint", "@stylistic"],
     "rules": {
         "@stylistic/semi": ["error", "always"],
         "react/prop-types": "off",
-        "react/react-in-jsx-scope": "off"
-        // "@typescript-eslint/no-explicit-any": "off",
-        // "@typescript-eslint/no-unused-vars": "warn",
-        // "@typescript-eslint/explicit-module-boundary-types": "off"
+        "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/explicit-module-boundary-types": "off"
     }
 }
