--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@heroicons/react": "^2.0.18",
         "@tailwindcss/typography": "^0.5.10",
         "clsx": "^2.0.0",
         "contentlayer": "^0.3.4",
