--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,20 +1,46 @@
-FROM node:20-alpine as build
+FROM node:20-alpine AS base
 
-WORKDIR '/app'
-COPY package.json .
-COPY package-lock.json .
+# Install dependencies only when needed
+FROM base AS deps
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
+WORKDIR /app
 
+# Install dependencies based on the preferred package manager
+COPY package*.json ./
+RUN npm ci --loglevel verbose
+
+# Rebuild the source code only when needed
+FROM base AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-RUN npm install --loglevel verbose
+ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN npm run build
 
+# Production image, copy all the files and run next
+FROM nginx:1.17.8-alpine AS runner
+WORKDIR /app
 
-FROM nginx:1.17.8-alpine
+ENV NODE_ENV production
 
-COPY --from=build /app/.next /usr/share/nginx/html
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
 
+COPY --from=builder /app/public /usr/share/nginx/html/public
+
+# Set the correct permission for prerender cache
+RUN mkdir .next
+RUN chown nextjs:nodejs .next
+
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone /usr/share/nginx/html/
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static /usr/share/nginx/html/.next/static
+
+USER nextjs
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY .nginx/nginx.conf /etc/nginx/conf.d
