--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /build
 
 # misc
+.vscode/*
+!.vscode/extensions.json
 .DS_Store
 *.pem
 
@@ -37,5 +39,3 @@ next-env.d.ts
 
 # contentlayer
 .contentlayer
-
-/.vscode
