--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
+# used by vps 
+
 version: '3.9'
 services:
     client:
-        build:
-            context: .
-            dockerfile: ./.docker/Dockerfile
+        image: ghcr.io/c-bv/next-portfolio:main
         restart: unless-stopped
         expose:
             - 3000
