Refactor extract repository name step in deploy.yml.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,7 @@ jobs:
         steps:
             - name: Extract Repository Name
               id: extract_repo_name
-              run: echo "::set-output name=repo_name::$(basename $REPO_NAME)"
-
-            - name: Use Extracted Repository Name
-              run: echo "Extracted Repository Name ${{ steps.extract_repo_name.outputs.repo_name }}"
+              run: echo "${{ github.event.repository.name }}"
 
             - name: Deploy to VPS
               uses: appleboy/ssh-action@v1.0.0
