--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,4 +1,4 @@
-name: Create and publish a Docker image
+name: Build and deploy
 
 on:
     push:
@@ -7,6 +7,7 @@ on:
 env:
     REGISTRY: ghcr.io
     IMAGE_NAME: ${{ github.repository }}
+    REPO_NAME: ${{ github.event.repository.name }}
 
 jobs:
     build-and-push-image:
@@ -41,3 +42,20 @@ jobs:
                   push: true
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
+
+    deploy:
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Deploy to VPS
+              uses: appleboy/ssh-action@v1.0.0
+              with:
+                  host: ${{ secrets.SSH_HOST }}
+                  username: ${{ secrets.SSH_USERNAME }}
+                  key: ${{ secrets.SSH_KEY }}
+                  port: ${{ secrets.SSH_PORT }}
+                  script: |
+                      cd ~/${{ env.REPO_NAME }}
+                      docker login ${{ env.REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
+                      docker-compose down --rmi all
+                      docker-compose up -d
