--- a/.github/workflows/prod.workflow.yml
+++ b/.github/workflows/prod.workflow.yml
@@ -1,4 +1,4 @@
-name: Build and deploy
+name: CI/CD
 
 on:
     push:
@@ -45,6 +45,7 @@ jobs:
 
     deploy:
         runs-on: ubuntu-latest
+        needs: build-and-push-image
 
         steps:
             - name: Deploy to VPS
